<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.a5h73y</groupId>
	<artifactId>Parkour</artifactId>
	<version>7.0</version>
	<packaging>jar</packaging>

	<name>Parkour</name>
	<description>The ultimate Parkour plugin.</description>
	<url>https://a5h73y.github.io/Parkour/</url>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<issueManagement>
		<url>https://github.com/A5H73Y/Parkour/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<repositories>
		<!-- Spigot API Repo -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<!-- Jitpack Repo -->
		<repository>
			<id>jitpack-repo</id>
			<url>https://jitpack.io/</url>
		</repository>
		<!-- Placeholder API Repo -->
		<repository>
			<id>placeholderapi-repo</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<!-- MySQL database Repo -->
		<repository>
			<id>husk</id>
			<url>https://maven.husk.pro/repository/maven-releases/</url>
		</repository>
		<!-- InventoryGui -->
		<repository>
			<id>minebench-repo</id>
			<url>https://repo.minebench.de/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.18.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>com.google.code.findbugs</groupId>
					<artifactId>jsr305</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.j2objc</groupId>
					<artifactId>j2objc-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Vault API -->
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7.1</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Placeholder API -->
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- Bountiful API -->
		<dependency>
			<groupId>com.github.ConnorLinfoot</groupId>
			<artifactId>BountifulAPI</artifactId>
			<version>1f1ef523a4bea125592ce3a11a163aca5d159761</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- bStats -->
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.0</version>
			<scope>compile</scope>
		</dependency>
		<!-- MySQL Database -->
		<dependency>
			<groupId>pro.husk</groupId>
			<artifactId>mysql</artifactId>
			<version>1.4.2</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- InventoryGui -->
		<dependency>
			<groupId>de.themoep</groupId>
			<artifactId>inventorygui</artifactId>
			<version>1.5-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<!-- XSeries -->
		<dependency>
			<groupId>com.github.cryptomorin</groupId>
			<artifactId>XSeries</artifactId>
			<version>8.6.1</version>
			<scope>compile</scope>
		</dependency>
		<!-- Version Compare -->
		<dependency>
			<groupId>io.github.g00fy2</groupId>
			<artifactId>versioncompare</artifactId>
			<version>1.5.0</version>
			<scope>compile</scope>
		</dependency>
		<!-- Simplix Storage -->
		<dependency>
			<groupId>com.github.simplix-softworks</groupId>
			<artifactId>simplixstorage</artifactId>
			<version>3.2.4</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<defaultGoal>clean package</defaultGoal>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<minimizeJar>true</minimizeJar>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/</exclude>
							</excludes>
						</filter>
					</filters>
					<artifactSet>
						<excludes>
							<exclude>org.jetbrains:annotations</exclude>
							<exclude>org.slf4j:*</exclude>
						</excludes>
					</artifactSet>
					<relocations>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>io.github.a5h73y.parkour.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.cryptomorin.xseries</pattern>
							<shadedPattern>io.github.a5h73y.parkour.support</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.github.simplix-softworks</pattern>
							<shadedPattern>io.github.a5h73y.parkour.storage</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>copy-my-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<overwrite>true</overwrite>
							<outputDirectory>${basedir}/docs/files/</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources</directory>
									<filtering>false</filtering>
									<includes>
										<include>**/*.json</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<configLocation>src/main/resources/parkourCheckstyles.xml</configLocation>
					<encoding>${project.build.sourceEncoding}</encoding>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
					<linkXRef>false</linkXRef>
				</configuration>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${export_dir}</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
